--- a/Legal Consulting.html
+++ b/Legal Consulting.html
@@ -158,7 +158,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
        <li><i class="fa fa-envelope"></i> sasha@londoncityassociates.com</li>
         <li><i class="fa fa-home"></i> 27 Old Gloucester Street, London, WC1N 3AX,   United Kingdom</li>
     </ul> 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155.1618452268583!2d-0.12207988054385202!3d51.520746272710326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b36a2cf0de1%3A0xfd0dda97400466a9!2s27%20Old%20Gloucester%20St%2C%20Camden%20Town%2C%20London%20WC1N%203AX%2C%20UK!5e0!3m2!1sen!2sby!4v1605725493016!5m2!1sen!2sby" class="map" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155.16168981923076!2d-0.1220009050280431!3d51.52079188609282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b36a3aa5ded%3A0x90a050fd9a50b27b!2s27%20Old%20Gloucester%20St%2C%20Holborn%2C%20London%20WC1N%203AF%2C%20UK!5e0!3m2!1sen!2sby!4v1606554651438!5m2!1sen!2sby" class="map" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     
     </div>
     
