--- a/Accounting Services.html
+++ b/Accounting Services.html
@@ -91,7 +91,9 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
         </div>
     <div class="services">
         <div id="service-text">
-        <div>Our Services</div>
+            <div class="services">
+                <div id="service-text">
+                <div class="lc"><span>Accounting Services</span></div></div></div>
         <div>We provide bookkeeping, accounting, payroll services and tax advice to individuals and small and medium size businesses. </div>
         
          </div>
