--- a/Legal Consulting.html
+++ b/Legal Consulting.html
@@ -124,8 +124,8 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
                         </div>
                     </li>
                 </ul>
-                <ul id="movieposters" class="movie" style="margin-top: -150px;">
-                    <li class="leg_ass">
+                <ul id="movieposters" class="movie" style="margin-top: -220px;">
+                    <li class="leg_ass" style="margin-left: 220px;">
                         <img src="img/Legal assistance.jpg" alt="" />
                         <div class="movieinfo">
                             <h3>Legal Assistance with Business Deals
@@ -134,7 +134,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
                         </div>
                     </li>
                    
-                    <li class="leg_cert" style="margin-left: 420px;">
+                    <li class="leg_cert" style="margin-left: 1px;">
                         <img src="img/Legal translation.jpg" alt="" />
                         <div class="movieinfo">
                             <h3>Legal Certified Translation Interpreting</h3>
