--- a/Legal Consulting.html
+++ b/Legal Consulting.html
@@ -46,7 +46,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
               
                   <li class="menu-item">
                     
-                      <a href="home.html" class="menu-link signInMobile">Home</a>
+                      <a href="index.html" class="menu-link signInMobile">Home</a>
                   </li>
                   <li class="menu-item">
                       <a href="Accounting Services.html" class="menu-link">Accounting Services</a>
@@ -71,7 +71,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
               </div>
               <div class="nav2">
                   <ul>
-                  <li class="menu"><a href="home.html" >Home</a>
+                  <li class="menu"><a href="index.html" >Home</a>
                    <a href="Accounting Services.html">Accounting Services</a> 
                   <a href="Legal Consulting.html" >Legal Consulting</a> 
                   <a href="Contact.html" >Contact Us</a></li>
@@ -105,14 +105,14 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
                     <li>
                         <img src="img/Business contracts.jpg" alt="" />
                         <div class="movieinfo">
-                            <h3>Business Contrats</h3>
+                            <h3>Business Contraсts</h3>
                             <p></p>
                         </div>
                     </li>
                     <li class="employment_contr">
                         <img src="img/Employment Contract.jpg" alt="" />
                         <div class="movieinfo">
-                            <h3>Employment Contrats</h3>
+                            <h3>Employment Contraсts</h3>
                             <p></p>
                         </div>
                     </li>
