--- a/Accounting Services.html
+++ b/Accounting Services.html
@@ -48,7 +48,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
                 
                     <li class="menu-item">
                       
-                        <a href="home.html" class="menu-link signInMobile">Home</a>
+                        <a href="index.html" class="menu-link signInMobile">Home</a>
                     </li>
                     <li class="menu-item">
                         <a href="Accounting Services.html" class="menu-link">Accounting Services</a>
@@ -72,7 +72,7 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
             </div>
             <div class="nav2">
                 <ul>
-                <li class="menu"><a href="home.html" >Home</a>
+                <li class="menu"><a href="index.html" >Home</a>
                  <a href="Accounting Services.html">Accounting Services</a> 
                 <a href="Legal Consulting.html" >Legal Consulting</a> 
                 <a href="Contact.html" >Contact Us</a></li>
