--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,7 @@
             
                 <li class="menu-item">
                   
-                    <a href="home.html" class="menu-link signInMobile">Home</a>
+                    <a href="index.html" class="menu-link signInMobile">Home</a>
                 </li>
                 <li class="menu-item">
                     <a href="Accounting Services.html" class="menu-link">Accounting Services</a>
@@ -75,7 +75,7 @@
             </div>
             <div class="nav2">
                 <ul>
-                <li class="menu"><a href="home.html" >Home</a>
+                <li class="menu"><a href="index.html" >Home</a>
                  <a href="Accounting Services.html">Accounting Services</a> 
                 <a href="Legal Consulting.html" >Legal Consulting</a> 
                 <a href="Contact.html" >Contact Us</a></li>
@@ -138,7 +138,7 @@
         <span class="circle one"></span>
         <span class="circle two"></span>
 
-        <form>
+        <form action="send.php" method="POST">
           <h3 class="title">Contact</h3>
           <div class="input-container">
             <input type="text" name="name" class="input" />
@@ -151,7 +151,7 @@
             <span>Email</span>
           </div>
           <div class="input-container">
-            <input type="tel" name="phone" class="input" />
+            <input type="tel" name="tel" class="input" />
             <label for="">Telephone</label>
             <span>Telephone</span>
           </div>
