--- a/Accounting Services.html
+++ b/Accounting Services.html
@@ -75,10 +75,11 @@ src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"
                 <li class="menu"><a href="index.html" >Home</a>
                  <a href="Accounting Services.html">Accounting Services</a> 
                 <a href="Legal Consulting.html" >Legal Consulting</a> 
-                <a href="Contact.html" >Contact Us</a></li>
+                <a href="Contact.html" >Contact Us</a>
+                <a href="Our_partners.html">Our Partners</a></li></li>
                 </ul>
             </div>
-            <div class="nav3"><p><i class="fa fa-envelope" style="margin-left: 25px;">  </i> mail@londoncityassociates.com <i class="fa fa-map-marker" style=" padding-left: 55px;">  </i> 27 Old Gloucester Street, London, WC1N 3AX, United Kingdom</p></div>
+            <div class="nav3"><p><i class="fa fa-envelope" style="margin-left: 25px;">  </i> mail@londoncityassociates.com <i class="fa fa-map-marker" style=" padding-left: 155px;">  </i> 27 Old Gloucester Street, London, WC1N 3AX, United Kingdom</p></div>
     
         </div>
     
